samples/_failures_safe/1761151298_08073c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08f28421.c: In function ‘main’:
./samples/SAFE/__tmp_08f28421.c:178:20: error: missing terminating " character
  178 |             printf("Error encountered
      |                    ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_08f28421.c:178:13: error: expected expression at end of input
  178 |             printf("Error encountered
      |             ^~~~~~
./samples/SAFE/__tmp_08f28421.c:178:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_08f28421.c:178:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_08f28421.c:178:13: error: expected declaration or statement at end of input
